tgthrProgramManagement/force-app/main/default/objects/InterviewDocument__c/InterviewDocument__c.object-meta.xml
<CustomObject>
    <description>Tracks document metadata for Interview records, including caching policy and ContentDocument references. Acts as document index for fast queries and version tracking.</description>
    <label>Interview Document</label>
    <nameField>
        <displayFormat>IDOC-{0000}</displayFormat>
        <label>Interview Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>