tgthrProgramManagement/force-app/main/default/objects/InterviewDocument__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case context for this Interview document</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Interview Documents</relationshipLabel>
    <relationshipName>Interview_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>