tgthrProgramManagement/force-app/main/default/objects/InterviewDocument__c/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <description>Salesforce ContentDocument ID of the cached document file</description>
    <inlineHelpText>ID of the ContentDocument in Salesforce Files. Null if document is stateless (not cached).</inlineHelpText>
    <label>Content Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>