tgthrProgramManagement/force-app/main/default/objects/InterviewDocument__c/fields/CurrentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>CurrentDocumentId__c</fullName>
    <label>CurrentDocumentId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>