tgthrProgramManagement/force-app/main/default/objects/InterviewDocument__c/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <description>Reference to the Interview record that this document represents</description>
    <label>Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>Interview Documents</relationshipLabel>
    <relationshipName>Interview_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>