tgthrProgramManagement/force-app/main/default/objects/InterviewDocument__c/fields/InterviewTemplate__c.field-meta.xml
<CustomField>
    <fullName>InterviewTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Template used to generate this document</description>
    <label>Interview Template</label>
    <referenceTo>InterviewTemplate__c</referenceTo>
    <relationshipLabel>Interview Documents</relationshipLabel>
    <relationshipName>Interview_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>