tgthrProgramManagement/force-app/main/default/objects/InterviewDocument__c/fields/Rendering_Mode__c.field-meta.xml
<CustomField>
    <fullName>Rendering_Mode__c</fullName>
    <description>Determines how and where this document should be cached</description>
    <inlineHelpText>Stateless = always render on-the-fly; CachedOnInterview = cache on Interview only; CachedAlways = cache and attach to Case/Files for compliance</inlineHelpText>
    <label>Rendering Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stateless</fullName>
                <default>true</default>
                <label>Stateless</label>
            </value>
            <value>
                <fullName>CachedOnInterview</fullName>
                <label>Cached On Interview</label>
            </value>
            <value>
                <fullName>CachedAlways</fullName>
                <label>Cached Always</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>