tgthrProgramManagement/force-app/main/default/objects/InterviewDocument__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Interview__c</columns>
    <columns>InterviewTemplate__c</columns>
    <columns>Document_Status__c</columns>
    <columns>Rendering_Mode__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>